...
    <!-- GiverForm elements -->
    <string name="giver_form_title_input_hint">Add a title</string>
    <string name="giver_form_add_a_picture_button_text">Add a picture:</string>
    <string name="enter_description_hint">Enter description</string>
    <string name="enter_time_hint">Specify time</string>
    <string name="pickup_method_prompt_text">Pickup Type</string>
    <string name="share_button_text">Share</string>
    <string name="air_time_clickable_change_text">Change</string>
    <string name="enter_location_hint">Enter location</string>
    <string name="enter_location_to_hint">To</string>
    <string name="enter_location_from_hint">From</string>
    <string name="picture_prompt">Add a picture</string>
    <string name="pickup_information_prompt_text">Pickup information</string>
...

    <!--FCM-->
    <string name="takecare_notification_channel_name">TakeCare</string>
    <string name="payload_display_status">display_status</string>
    <string name="payload_admin_broadcast">admin_broadcast</string>
    <string name="payload_item_request_message">item_request_message</string>
    <string name="payload_data_message_title">title</string>
    <string name="payload_data_message_body">body</string>
    <string name="payload_data_notification_type">notification_type</string>
    <string name="payload_data_sender_id">sender_id</string>
    <string name="payload_data_item_id">item_id</string>
    <string name="payload_data_sender_photo">sender_photo_url</string>
    <string name="payload_data_notification_time">notification_time</string>
...
