...
            android:textColor="@color/colorPrimary"
            app:autoSizeTextType="uniform"
            app:fontFamily="@font/rambla_bold" />
    </FrameLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:elevation="3dp"
...
